--- a/cs661final.ipynb
+++ b/cs661final.ipynb
@@ -33,10 +33,25 @@
       "source": [
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns\n",
-        "from sklearn.model_selection import train_test_split\n"
+        "import seaborn as sns"
       ],
-      "execution_count": null,
+      "execution_count": 72,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.linear_model import LinearRegression, LogisticRegression\n",
+        "from sklearn.metrics import mean_squared_error, r2_score, accuracy_score, classification_report, confusion_matrix, ConfusionMatrixDisplay, roc_curve, auc\n",
+        "from sklearn.tree import DecisionTreeClassifier, plot_tree\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.preprocessing import LabelBinarizer"
+      ],
+      "metadata": {
+        "id": "3hjka8W8R_V1"
+      },
+      "execution_count": 73,
       "outputs": []
     },
     {
@@ -51,9 +66,9 @@
           "height": 206
         },
         "id": "mUeJSxL_2jFB",
-        "outputId": "da594c17-af01-47f6-d8bd-7ac27874eba8"
+        "outputId": "8f7a5f0d-eed0-4130-c1a4-8153432bb152"
       },
-      "execution_count": null,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -75,7 +90,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-64d37a6b-8279-40cc-ba04-a14aa5969d77\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-31db4dc7-57e4-40f7-a287-ba405a346b66\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -178,7 +193,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-64d37a6b-8279-40cc-ba04-a14aa5969d77')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-31db4dc7-57e4-40f7-a287-ba405a346b66')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -230,12 +245,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-64d37a6b-8279-40cc-ba04-a14aa5969d77 button.colab-df-convert');\n",
+              "        document.querySelector('#df-31db4dc7-57e4-40f7-a287-ba405a346b66 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-64d37a6b-8279-40cc-ba04-a14aa5969d77');\n",
+              "        const element = document.querySelector('#df-31db4dc7-57e4-40f7-a287-ba405a346b66');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -255,8 +270,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-b1bada28-9921-4792-89b1-fc9607a69508\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b1bada28-9921-4792-89b1-fc9607a69508')\"\n",
+              "    <div id=\"df-887b1582-54e1-47e4-98ea-8680c7fc7b71\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-887b1582-54e1-47e4-98ea-8680c7fc7b71')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -375,7 +390,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-b1bada28-9921-4792-89b1-fc9607a69508 button');\n",
+              "            document.querySelector('#df-887b1582-54e1-47e4-98ea-8680c7fc7b71 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -392,7 +407,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 74
         }
       ]
     },
@@ -408,9 +423,9 @@
           "height": 206
         },
         "id": "KLHkLaBK83T9",
-        "outputId": "38e2a5f6-9e6c-4455-effa-41c0a2872ee8"
+        "outputId": "752d4c4d-0d78-4719-92e2-bf0985d54f52"
       },
-      "execution_count": null,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -432,7 +447,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-17472015-2a1e-4104-b6fd-b7595d92b3fd\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-9cffeb76-b234-4799-a20a-cfbb2a4a36b5\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -535,7 +550,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-17472015-2a1e-4104-b6fd-b7595d92b3fd')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9cffeb76-b234-4799-a20a-cfbb2a4a36b5')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -587,12 +602,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-17472015-2a1e-4104-b6fd-b7595d92b3fd button.colab-df-convert');\n",
+              "        document.querySelector('#df-9cffeb76-b234-4799-a20a-cfbb2a4a36b5 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-17472015-2a1e-4104-b6fd-b7595d92b3fd');\n",
+              "        const element = document.querySelector('#df-9cffeb76-b234-4799-a20a-cfbb2a4a36b5');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -612,8 +627,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-7bbbf4e2-23d1-4369-8bf0-d8a8e936c071\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-7bbbf4e2-23d1-4369-8bf0-d8a8e936c071')\"\n",
+              "    <div id=\"df-38d94297-9f57-4e4e-be47-6056eea8226c\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-38d94297-9f57-4e4e-be47-6056eea8226c')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -732,7 +747,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-7bbbf4e2-23d1-4369-8bf0-d8a8e936c071 button');\n",
+              "            document.querySelector('#df-38d94297-9f57-4e4e-be47-6056eea8226c button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -749,7 +764,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 75
         }
       ]
     },
@@ -773,24 +788,12 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "from sklearn.linear_model import LinearRegression\n",
-        "from sklearn.metrics import mean_squared_error, r2_score"
-      ],
-      "metadata": {
-        "id": "wb5pc1Sc3iwb"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "cc68451f",
-        "outputId": "37c86798-71cd-4705-ab78-57aa0d9769c0"
+        "outputId": "a8e44e7f-23b2-4aaa-cc58-c23ad972f43a"
       },
       "source": [
         "X_income = df_cleaned[['median_income']]\n",
@@ -811,7 +814,7 @@
         "print(f\"  Mean Squared Error: {mse_income:.2f}\")\n",
         "print(f\"  R-squared: {r2_income:.2f}\")"
       ],
-      "execution_count": null,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "stream",
@@ -829,10 +832,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 564
+          "height": 0
         },
         "id": "77868cd5",
-        "outputId": "23938329-7c25-487b-b38d-944eb056ba97"
+        "outputId": "40845ddc-51bc-4b69-fa3b-e7fe60c58bf5"
       },
       "source": [
         "plt.figure(figsize=(10, 6))\n",
@@ -846,7 +849,7 @@
         "plt.grid(True)\n",
         "plt.show()"
       ],
-      "execution_count": null,
+      "execution_count": 77,
       "outputs": [
         {
           "output_type": "display_data",
@@ -889,12 +892,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 564
+          "height": 0
         },
         "id": "QCp2Z1stKyCq",
-        "outputId": "93822702-11fd-4069-b610-1e48ff5c6423"
+        "outputId": "eea54adf-a811-43c2-a24f-c1726ab9dbb2"
       },
-      "execution_count": null,
+      "execution_count": 78,
       "outputs": [
         {
           "output_type": "display_data",
@@ -935,12 +938,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 564
+          "height": 0
         },
         "id": "zo9EedcIK2Lq",
-        "outputId": "15943e20-2683-4db3-cce9-736fbff04d41"
+        "outputId": "b0d72f91-95e0-4aa8-b791-44d58f6852c5"
       },
-      "execution_count": null,
+      "execution_count": 79,
       "outputs": [
         {
           "output_type": "display_data",
@@ -977,12 +980,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 564
+          "height": 0
         },
         "id": "zuYxm0f_L-Yd",
-        "outputId": "5ca05040-b3b9-4ceb-9c86-4da36f1380e5"
+        "outputId": "a1865a9d-ebd0-4e5f-aa5d-d58b2e22c18c"
       },
-      "execution_count": null,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1016,24 +1019,12 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "from sklearn.linear_model import LogisticRegression\n",
-        "from sklearn.metrics import accuracy_score, classification_report"
-      ],
-      "metadata": {
-        "id": "juqTIeMl2FE4"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "f65c23b6",
-        "outputId": "cac9a57c-779f-4493-8283-5d91f3f0e66e"
+        "outputId": "0e4ecee7-0e5d-4162-8c30-9a5a044431e4"
       },
       "source": [
         "X = df_cleaned.drop('ocean_proximity', axis=1)\n",
@@ -1055,7 +1046,7 @@
         "print(\"\\nClassification Report:\")\n",
         "print(report)"
       ],
-      "execution_count": null,
+      "execution_count": 81,
       "outputs": [
         {
           "output_type": "stream",
@@ -1125,12 +1116,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 564
+          "height": 0
         },
         "id": "_e59nN8pG5c4",
-        "outputId": "f254d51b-fedf-46c7-8091-c865822d420f"
+        "outputId": "e4a4cd31-58a6-4292-bd12-3055d0ac5d8f"
       },
-      "execution_count": null,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1171,9 +1162,9 @@
           "height": 564
         },
         "id": "QN2xgsjXG5zX",
-        "outputId": "0d077188-86a1-4533-d5c4-d560a224981c"
+        "outputId": "cd8b5a9b-0c10-481f-a146-9e60fde59eb7"
       },
-      "execution_count": null,
+      "execution_count": 83,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1215,9 +1206,9 @@
           "height": 564
         },
         "id": "2QWgI7jWG9Nc",
-        "outputId": "332965c9-4a18-429f-8c41-f69fb9078798"
+        "outputId": "1536a605-2897-4183-9a89-54af8aaf0616"
       },
-      "execution_count": null,
+      "execution_count": 84,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1252,21 +1243,6 @@
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.tree import DecisionTreeClassifier, plot_tree\n",
-        "from sklearn.metrics import accuracy_score, classification_report"
-      ],
-      "metadata": {
-        "id": "ekFnO5Im37iz"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from sklearn.tree import DecisionTreeClassifier, plot_tree\n",
-        "from sklearn.metrics import accuracy_score, classification_report\n",
-        "\n",
         "X_dt = df_cleaned.drop('ocean_proximity', axis=1)\n",
         "y_dt = df_cleaned['ocean_proximity']\n",
         "\n",
@@ -1297,9 +1273,9 @@
           "height": 1000
         },
         "id": "bf43cG2D262X",
-        "outputId": "525044ab-920a-4690-d1fa-00713f183352"
+        "outputId": "d8550e96-20d6-44f1-e69a-574275a13b20"
       },
-      "execution_count": null,
+      "execution_count": 85,
       "outputs": [
         {
           "output_type": "stream",
@@ -1371,9 +1347,9 @@
           "height": 1000
         },
         "id": "lWc1eiFG6O7U",
-        "outputId": "fa453271-4944-4536-d189-b467ccfe537e"
+        "outputId": "94d15fed-1a46-407a-8c7b-c335906a1257"
       },
-      "execution_count": null,
+      "execution_count": 86,
       "outputs": [
         {
           "output_type": "stream",
@@ -1445,12 +1421,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 718
+          "height": 0
         },
         "id": "7iecywgsIX3N",
-        "outputId": "7365aec7-7d36-4551-d110-a6de55c1d5fe"
+        "outputId": "0b4aa6e1-a133-4241-c443-fa039896635e"
       },
-      "execution_count": null,
+      "execution_count": 87,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1490,9 +1466,9 @@
           "height": 526
         },
         "id": "PBw3becvIt5b",
-        "outputId": "b59e17cc-0682-4026-e034-b99c4c69cf55"
+        "outputId": "9883b073-07f0-40b9-efb6-1b8a13278dde"
       },
-      "execution_count": null,
+      "execution_count": 88,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1532,9 +1508,9 @@
           "height": 526
         },
         "id": "bREhNdN2I8h4",
-        "outputId": "7ecd988d-1ee0-4f84-bfa4-6dda71cd8771"
+        "outputId": "dd54d22c-565b-4fa1-b521-a5bc64dba834"
       },
-      "execution_count": null,
+      "execution_count": 89,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1569,19 +1545,6 @@
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.ensemble import RandomForestClassifier\n",
-        "from sklearn.metrics import accuracy_score, classification_report\n",
-        "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n"
-      ],
-      "metadata": {
-        "id": "yOHXO5DL39Pm"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "X_rf = df_cleaned.drop('ocean_proximity', axis=1)\n",
         "y_rf = df_cleaned['ocean_proximity']\n",
         "\n",
@@ -1606,9 +1569,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rDotsAOF3Hb1",
-        "outputId": "f8a00987-9ce9-401c-bb0e-ca44be89e450"
+        "outputId": "168fe5ab-c190-4ac6-8845-9b0380e0c23b"
       },
-      "execution_count": null,
+      "execution_count": 90,
       "outputs": [
         {
           "output_type": "stream",
@@ -1665,9 +1628,9 @@
           "height": 718
         },
         "id": "ymWJiB016sGd",
-        "outputId": "6233885c-f274-46b6-fdd0-56d4a2affdd2"
+        "outputId": "05a51f89-7b33-47fc-abe6-c417dff31da3"
       },
-      "execution_count": null,
+      "execution_count": 91,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1715,9 +1678,9 @@
           "height": 718
         },
         "id": "JE2kWhK8Jh9a",
-        "outputId": "dcc240ef-12d6-49ca-e6e9-844ae3c6d8ab"
+        "outputId": "7e334a58-01f6-4fd3-be63-656f2d3d8250"
       },
-      "execution_count": null,
+      "execution_count": 92,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1743,9 +1706,6 @@
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.metrics import roc_curve, auc, RocCurveDisplay\n",
-        "from sklearn.preprocessing import LabelBinarizer\n",
-        "\n",
         "\n",
         "y_pred_proba_rf = random_forest_model.predict_proba(X_test_rf)\n",
         "\n",
@@ -1774,9 +1734,9 @@
           "height": 718
         },
         "id": "xP9gG9GLJ5wc",
-        "outputId": "e9a42600-9c95-4e05-a5ca-e5a3dd052d95"
+        "outputId": "6824bad3-56e8-4d84-87b6-19a62663193a"
       },
-      "execution_count": null,
+      "execution_count": 93,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1819,9 +1779,9 @@
           "height": 718
         },
         "id": "BscnWreCKIYw",
-        "outputId": "852e3842-9b3b-4341-d924-a99993676031"
+        "outputId": "9fcda329-7ce7-4202-940a-cabf1111a70b"
       },
-      "execution_count": null,
+      "execution_count": 94,
       "outputs": [
         {
           "output_type": "display_data",
